New galaxy catalog with extended halo information

--- a/note/um_smdpl_organize_gal_catalog.ipynb
+++ b/note/um_smdpl_organize_gal_catalog.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-01-05T19:43:34.212529Z",
@@ -47,11 +47,11 @@
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "/usr/local/lib/python2.7/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
      ]
     }
    ],
@@ -144,8 +144,8 @@
    ],
    "source": [
     "# Setup environment \n",
-    "#envir = s16a_path.set_env(version='astro5')\n",
-    "envir = s16a_path.set_env(version='kungpao')\n",
+    "envir = s16a_path.set_env(version='astro5')\n",
+    "#envir = s16a_path.set_env(version='kungpao')\n",
     "\n",
     "# Folder for new UM model \n",
     "um_dir = os.path.join(envir['s16a'], 'um2/um2_new')\n",
@@ -155,7 +155,7 @@
     "um_smdpl_old = np.load(os.path.join(um_smdpl_dir, \n",
     "                                    'sfr_catalog_0.712400_final.npz'))\n",
     "um_smdpl_new = np.load(os.path.join(um_smdpl_dir, \n",
-    "                                    'sfr_catalog_insitu_exsitu_0.712400_final.npz'))\n",
+    "                                    'sfr_catalog_insitu_exsitu_0.712400_final_extended.npz'))\n",
     "\n",
     "# Results for central and satellite galaxies\n",
     "um_smdpl_old_cen = Table(um_smdpl_old['centrals'])\n",
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-01-05T19:36:43.132070Z",
@@ -182,10 +182,37 @@
    "outputs": [],
    "source": [
     "# vstack the centrals and satellites \n",
-    "\n",
     "um_smdpl_old_all = vstack([um_smdpl_old_cen, um_smdpl_old_sat])\n",
-    "um_smdpl_new_all = vstack([um_smdpl_new_cen, um_smdpl_new_sat])\n",
-    "\n",
+    "um_smdpl_new_all = vstack([um_smdpl_new_cen, um_smdpl_new_sat])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "um_smdpl_new_all.rename_column('mvir', 'mvir_hlist')\n",
+    "um_smdpl_new_all.rename_column('rvir', 'rvir_hlist')\n",
+    "um_smdpl_new_all.rename_column('rs', 'rs_hlist')\n",
+    "um_smdpl_new_all.rename_column('Halfmass_Scale', 'scale_half_mass')\n",
+    "um_smdpl_new_all.rename_column('scale_of_last_MM', 'scale_last_mm')\n",
+    "um_smdpl_new_all.rename_column('M200b', 'm200b_hlist')\n",
+    "um_smdpl_new_all.rename_column('M200c', 'm200c_hlist')\n",
+    "um_smdpl_new_all.rename_column('Acc_Rate_Inst', 'acc_rate_inst')\n",
+    "um_smdpl_new_all.rename_column('Acc_Rate_100Myr', 'acc_rate_100myr')\n",
+    "um_smdpl_new_all.rename_column('Acc_Rate_1*Tdyn', 'acc_rate_1_tdyn')\n",
+    "um_smdpl_new_all.rename_column('Acc_Rate_2*Tdyn', 'acc_rate_2_tdyn')\n",
+    "um_smdpl_new_all.rename_column('Acc_Rate_Mpeak', 'acc_rate_mpeak')\n",
+    "um_smdpl_new_all.rename_column('Vmax@Mpeak', 'vmax_at_mpeak')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Value added the catalogs \n",
     "um_smdpl_old_all = value_added_smdpl_mock(um_smdpl_old_all)\n",
     "um_smdpl_new_all = value_added_smdpl_mock(um_smdpl_new_all)"
@@ -205,7 +232,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['halo_id', 'upid', 'x', 'y', 'z', 'mvir', 'mpeak', 'sm', 'icl', 'sfr', 'halo_hostid', 'mhalo_host', 'mask_central', 'mtot_galaxy', 'mstar_mhalo', 'logms_gal', 'logms_icl', 'logms_tot', 'logms_halo', 'logmh_vir', 'logmh_peak', 'logmh_host']\n",
+      "['halo_id', 'upid', 'x', 'y', 'z', 'mvir', 'mpeak', 'sm', 'icl', 'sfr', 'mvir_hlist', 'rvir_hlist', 'rs_hlist', 'scale_half_mass', 'scale_last_mm', 'm200b_hlist', 'm200c_hlist', 'acc_rate_inst', 'acc_rate_100myr', 'acc_rate_1_tdyn', 'acc_rate_2_tdyn', 'acc_rate_mpeak', 'vmax_at_mpeak', 'halo_hostid', 'mhalo_host', 'mask_central', 'mtot_galaxy', 'mstar_mhalo', 'logms_gal', 'logms_icl', 'logms_tot', 'logms_halo', 'logmh_vir', 'logmh_peak', 'logmh_host']\n",
       "11193763\n"
      ]
     }
@@ -236,7 +263,7 @@
     "                                         'um_smdpl_0.7124_old_vagc_mhost_11.5.fits'),\n",
     "                            format='fits', overwrite=True)\n",
     "um_smdpl_new_all_vagc.write(os.path.join(um_dir,\n",
-    "                                         'um_smdpl_0.7124_new_vagc_mhost_11.5.fits'),\n",
+    "                                         'um_smdpl_0.7124_new_vagc_mhost_11.5_extended.fits'),\n",
     "                            format='fits', overwrite=True)\n",
     "\n",
     "# Numpy array \n",
@@ -245,7 +272,7 @@
     "        np.asarray(um_smdpl_old_all_vagc)\n",
     "       )\n",
     "np.save(os.path.join(um_dir,\n",
-    "                     'um_smdpl_0.7124_new_vagc_mhost_11.5.npy'),\n",
+    "                     'um_smdpl_0.7124_new_vagc_mhost_11.5_extended.npy'),\n",
     "        np.asarray(um_smdpl_new_all_vagc)\n",
     "       )"
    ]
@@ -334,32 +361,17 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "version": "2.7.13"
   },
   "nav_menu": {},
   "toc": {
-   "colors": {
-    "hover_highlight": "#DAA520",
-    "navigate_num": "#000000",
-    "navigate_text": "#333333",
-    "running_highlight": "#FF0000",
-    "selected_highlight": "#FFD700",
-    "sidebar_border": "#EEEEEE",
-    "wrapper_background": "#FFFFFF"
-   },
-   "moveMenuLeft": true,
-   "nav_menu": {
-    "height": "99px",
-    "width": "252px"
-   },
    "navigate_menu": true,
    "number_sections": true,
    "sideBar": true,
    "threshold": 4,
    "toc_cell": false,
    "toc_section_display": "block",
-   "toc_window_display": false,
-   "widenNotebook": false
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
