Catalogs for Enia

--- a/note/um_smdpl_catalogs_for_enia.ipynb
+++ b/note/um_smdpl_catalogs_for_enia.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-01-16T20:27:00.919639Z",
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-01-16T21:02:09.416271Z",
@@ -118,7 +118,7 @@
        "384000.0"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +333,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "&lt;Table length=10000000&gt;\n",
+       "<table id=\"table4554844240\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>x</th><th>y</th><th>z</th><th>vx</th><th>vy</th><th>vz</th></tr></thead>\n",
+       "<thead><tr><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th></tr></thead>\n",
+       "<tr><td>26.385693</td><td>155.637787</td><td>272.54562400000003</td><td>306.78204300000004</td><td>875.9756470000001</td><td>-613.103516</td></tr>\n",
+       "<tr><td>87.219139</td><td>112.175758</td><td>132.70533799999998</td><td>-173.78956599999998</td><td>260.49707</td><td>-16.969305</td></tr>\n",
+       "<tr><td>138.164505</td><td>236.24818399999998</td><td>58.923714000000004</td><td>325.57662999999997</td><td>-188.93086200000002</td><td>-229.29731800000002</td></tr>\n",
+       "<tr><td>174.715546</td><td>341.994141</td><td>32.361649</td><td>-213.701065</td><td>-277.57919300000003</td><td>205.549957</td></tr>\n",
+       "<tr><td>157.268723</td><td>3.7650589999999995</td><td>227.342438</td><td>-383.187958</td><td>-51.1507</td><td>204.251892</td></tr>\n",
+       "<tr><td>100.059814</td><td>397.09549</td><td>137.771408</td><td>884.2397460000001</td><td>235.00379900000001</td><td>-53.026073</td></tr>\n",
+       "<tr><td>0.90895</td><td>88.962151</td><td>382.43255600000003</td><td>-82.771698</td><td>255.23345899999998</td><td>-430.706604</td></tr>\n",
+       "<tr><td>141.053818</td><td>312.628723</td><td>154.497391</td><td>-133.73439</td><td>163.941177</td><td>249.331497</td></tr>\n",
+       "<tr><td>52.208397</td><td>31.681793</td><td>353.586548</td><td>475.40487699999994</td><td>123.50423400000001</td><td>-507.69848600000006</td></tr>\n",
+       "<tr><td>161.046295</td><td>197.29028300000002</td><td>268.847839</td><td>-31.773907</td><td>-165.50143400000002</td><td>279.120117</td></tr>\n",
+       "<tr><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td></tr>\n",
+       "<tr><td>246.53010600000002</td><td>299.511597</td><td>51.068317</td><td>-405.056946</td><td>-256.310272</td><td>-329.390625</td></tr>\n",
+       "<tr><td>249.48393199999998</td><td>161.2612</td><td>161.79895</td><td>556.487183</td><td>-84.741463</td><td>-296.771057</td></tr>\n",
+       "<tr><td>92.32019</td><td>160.28624</td><td>369.543793</td><td>-9.479431</td><td>-77.3797</td><td>-463.864319</td></tr>\n",
+       "<tr><td>268.344208</td><td>70.879623</td><td>122.30953999999998</td><td>-56.364838</td><td>537.7470089999999</td><td>-402.049042</td></tr>\n",
+       "<tr><td>259.213593</td><td>198.68696599999998</td><td>311.01129199999997</td><td>-290.498688</td><td>230.20414700000003</td><td>542.428528</td></tr>\n",
+       "<tr><td>109.84306299999999</td><td>86.593422</td><td>35.905468</td><td>-210.050659</td><td>-224.66394</td><td>419.190033</td></tr>\n",
+       "<tr><td>153.994659</td><td>250.93920899999998</td><td>312.60195899999997</td><td>314.687317</td><td>533.3701169999999</td><td>-639.121399</td></tr>\n",
+       "<tr><td>28.877484999999997</td><td>316.526154</td><td>155.58596799999998</td><td>197.23095700000002</td><td>-130.441299</td><td>355.506683</td></tr>\n",
+       "<tr><td>395.823151</td><td>84.89739200000001</td><td>24.519533</td><td>-303.197449</td><td>-442.646515</td><td>-341.262329</td></tr>\n",
+       "<tr><td>2.797488</td><td>72.322456</td><td>170.50882</td><td>53.726870999999996</td><td>149.800385</td><td>247.46966600000002</td></tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<Table length=10000000>\n",
+       "        x                  y          ...          vz        \n",
+       "     float64            float64       ...       float64      \n",
+       "------------------ ------------------ ... -------------------\n",
+       "         26.385693         155.637787 ...         -613.103516\n",
+       "         87.219139         112.175758 ...          -16.969305\n",
+       "        138.164505 236.24818399999998 ... -229.29731800000002\n",
+       "        174.715546         341.994141 ...          205.549957\n",
+       "        157.268723 3.7650589999999995 ...          204.251892\n",
+       "        100.059814          397.09549 ...          -53.026073\n",
+       "           0.90895          88.962151 ...         -430.706604\n",
+       "        141.053818         312.628723 ...          249.331497\n",
+       "         52.208397          31.681793 ... -507.69848600000006\n",
+       "        161.046295 197.29028300000002 ...          279.120117\n",
+       "               ...                ... ...                 ...\n",
+       "246.53010600000002         299.511597 ...         -329.390625\n",
+       "249.48393199999998           161.2612 ...         -296.771057\n",
+       "          92.32019          160.28624 ...         -463.864319\n",
+       "        268.344208          70.879623 ...         -402.049042\n",
+       "        259.213593 198.68696599999998 ...          542.428528\n",
+       "109.84306299999999          86.593422 ...          419.190033\n",
+       "        153.994659 250.93920899999998 ...         -639.121399\n",
+       "28.877484999999997         316.526154 ...          355.506683\n",
+       "        395.823151  84.89739200000001 ...         -341.262329\n",
+       "          2.797488          72.322456 ...  247.46966600000002"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "um_smdpl_10m_tab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
