cleanup of plots

--- a/cb/sanity_checks.ipynb
+++ b/cb/sanity_checks.ipynb
@@ -6,7 +6,10 @@
    "source": [
     "# Sanity Checks\n",
     "\n",
-    "Any number of sanity checks on our data and models"
+    "Any number of sanity checks on our data and models\n",
+    "\n",
+    "## TODO\n",
+    "* https://arxiv.org/pdf/1103.2077.pdf doesn't work"
    ]
   },
   {
@@ -388,7 +391,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "##  Now show that our fits invert themselves"
    ]
@@ -396,7 +401,9 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -461,7 +468,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Compare SM scatter to HM scatter\n",
     "\n",
@@ -471,7 +480,9 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
