--- a/cb/main.ipynb
+++ b/cb/main.ipynb
@@ -48,11 +48,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 278,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
