--- a/note/um_smdpl_catalogs_for_enia.ipynb
+++ b/note/um_smdpl_catalogs_for_enia.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-01-16T20:49:12.040115Z",
-     "start_time": "2018-01-16T20:49:11.765235Z"
+     "end_time": "2018-02-24T01:32:33.759054Z",
+     "start_time": "2018-02-24T01:32:32.399615Z"
     }
    },
    "outputs": [],
@@ -81,8 +81,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-01-16T20:27:00.919639Z",
-     "start_time": "2018-01-16T20:27:00.896596Z"
+     "end_time": "2018-02-24T01:32:35.238812Z",
+     "start_time": "2018-02-24T01:32:35.211582Z"
     }
    },
    "outputs": [
@@ -107,8 +107,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-01-16T21:02:09.416271Z",
-     "start_time": "2018-01-16T21:02:09.387159Z"
+     "end_time": "2018-02-24T01:32:36.162061Z",
+     "start_time": "2018-02-24T01:32:36.133336Z"
     }
    },
    "outputs": [
@@ -129,11 +129,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-01-16T20:44:31.559171Z",
-     "start_time": "2018-01-16T20:44:24.213857Z"
+     "end_time": "2018-02-24T01:33:54.616183Z",
+     "start_time": "2018-02-24T01:33:48.135914Z"
     }
    },
    "outputs": [
@@ -146,8 +146,8 @@
     }
    ],
    "source": [
-    "# um_smdpl_dir = '/Users/song/data/massive/dr16a/um2/um2_new/um_smdpl_small'\n",
-    "um_smdpl_dir = '/Users/song/astro5/massive/dr16a/um2/um2_new/um_smdpl_small'\n",
+    "um_smdpl_dir = '/Users/song/data/massive/dr16a/um2/um2_new/um_smdpl'\n",
+    "# um_smdpl_dir = '/Users/song/astro5/massive/dr16a/um2/um2_new/um_smdpl_small'\n",
     "um_smdpl_short = 'sfr_catalog_insitu_exsitu_0.712400_final_logmp_11.npz'\n",
     "\n",
     "um_smdpl_new_cen = np.load(\n",
@@ -160,8 +160,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-02-24T01:34:02.941064Z",
+     "start_time": "2018-02-24T01:33:58.484419Z"
+    },
     "scrolled": false
    },
    "outputs": [
@@ -183,28 +187,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "um_smdpl_tab.write(\n",
-    "    os.path.join(um_smdpl_dir, 'sfr_catalog_insitu_exsitu_0.712400_final_logmp_11.fits'),\n",
-    "    format='fits', overwrite=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-01-16T20:50:25.316280Z",
-     "start_time": "2018-01-16T20:50:25.228347Z"
+     "end_time": "2018-02-24T01:34:09.734238Z",
+     "start_time": "2018-02-24T01:34:09.542890Z"
     }
    },
    "outputs": [],
    "source": [
     "um_smdpl_tab.add_column(Column(data=(um_smdpl_tab['sm'] + um_smdpl_tab['icl']), \n",
     "                               name='ms_tot'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-02-24T01:34:37.100427Z",
+     "start_time": "2018-02-24T01:34:11.534781Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "um_smdpl_tab.write(\n",
+    "    os.path.join(um_smdpl_dir, 'sfr_catalog_insitu_exsitu_0.712400_final_logmp_11.fits'),\n",
+    "    format='fits', overwrite=True)"
    ]
   },
   {
@@ -433,17 +442,32 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.14"
   },
   "nav_menu": {},
   "toc": {
+   "colors": {
+    "hover_highlight": "#DAA520",
+    "navigate_num": "#000000",
+    "navigate_text": "#333333",
+    "running_highlight": "#FF0000",
+    "selected_highlight": "#FFD700",
+    "sidebar_border": "#EEEEEE",
+    "wrapper_background": "#FFFFFF"
+   },
+   "moveMenuLeft": true,
+   "nav_menu": {
+    "height": "84px",
+    "width": "253px"
+   },
    "navigate_menu": true,
    "number_sections": true,
    "sideBar": true,
    "threshold": 4,
    "toc_cell": false,
    "toc_section_display": "block",
-   "toc_window_display": false
+   "toc_window_display": false,
+   "widenNotebook": false
   }
  },
  "nbformat": 4,
