Small typo corrected

--- a/note/asap_um_assembias_search.ipynb
+++ b/note/asap_um_assembias_search.ipynb
@@ -427,8 +427,8 @@
     "cen_mask = halo_use['upid'] == -1\n",
     "\n",
     "# Group galaxies based on their location on the Mmax-M10 plane\n",
-    "upp_mask = minn_use - (-1.0 * mtot_use + intercept_b) >= 0\n",
-    "low_mask = minn_use - (-1.0 * mtot_use + intercept_b) < 0\n",
+    "upp_mask = minn_use - (slope_b * mtot_use + intercept_b) >= 0\n",
+    "low_mask = minn_use - (slope_b * mtot_use + intercept_b) < 0\n",
     "\n",
     "# Mean halo mass\n",
     "upp_mhalo_mean = np.nanmedian(halo_use[upp_mask & cen_mask]['logmh_vir'])\n",
