--- a/note/um_smdpl_organize_gal_catalog.ipynb
+++ b/note/um_smdpl_organize_gal_catalog.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-01-05T19:43:34.212529Z",
@@ -47,11 +47,11 @@
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python2.7/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
@@ -72,6 +72,8 @@
     "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
     "from matplotlib.ticker import MaxNLocator\n",
     "\n",
+    "from astropy.table import Table, Column, vstack\n",
+    "\n",
     "%config InlineBackend.figure_format='retina'\n",
     "plt.rcParams['figure.dpi'] = 100.0\n",
     "plt.rcParams['figure.facecolor'] = 'w'\n",
@@ -80,12 +82,8 @@
     "plt.rc('text', usetex=True)\n",
     "\n",
     "# Personal repo\n",
-    "from stellar_mass_function import compute_smf, \\\n",
-    "    bootstrap_smf\n",
-    "from load_mdpl2_mock import value_added_smdpl_mock\n",
-    "from model_predictions import total_stellar_mass_including_satellites\n",
-    "\n",
-    "from prepare_universe_machine import prep_um_catalog\n",
+    "from asap.um_prepare_catalog import prep_um_catalog\n",
+    "from asap.um_vagc_mock import *\n",
     "    \n",
     "from hsc_massive import \\\n",
     "    s16a_path, \\\n",
@@ -97,20 +95,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-01-05T19:36:15.915316Z",
-     "start_time": "2018-01-05T19:36:15.885833Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from astropy.table import Table, Column, vstack"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "ExecuteTime": {
@@ -119,12 +103,12 @@
     }
    },
    "source": [
-    "# Summary catalogs for SMDPL-UniverseMachine model"
+    "## Old model (before 1806): Summary catalogs for SMDPL-UniverseMachine model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-01-05T19:36:25.550113Z",
@@ -144,8 +128,8 @@
    ],
    "source": [
     "# Setup environment \n",
-    "envir = s16a_path.set_env(version='astro5')\n",
-    "#envir = s16a_path.set_env(version='kungpao')\n",
+    "#envir = s16a_path.set_env(version='astro5')\n",
+    "envir = s16a_path.set_env(version='kungpao')\n",
     "\n",
     "# Folder for new UM model \n",
     "um_dir = os.path.join(envir['s16a'], 'um2/um2_new')\n",
@@ -172,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-01-05T19:36:43.132070Z",
@@ -188,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-01-05T19:44:08.186971Z",
@@ -275,6 +259,43 @@
     "                     'um_smdpl_0.7124_new_vagc_mhost_11.5_extended.npy'),\n",
     "        np.asarray(um_smdpl_new_all_vagc)\n",
     "       )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## New Galaxy v.s. IHL model [1806]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3194800, 14488529)\n",
+      "['id', 'upid', 'x', 'y', 'z', 'vx', 'vy', 'vz', 'm', 'mp', 'vmp', 'r', 'sm', 'icl', 'sfr', 'ssfr']\n"
+     ]
+    }
+   ],
+   "source": [
+    "smdpl_gal_dir = \"/Users/song/data/massive/umachine/1806/smdpl_bestfit\"\n",
+    "\n",
+    "# New galaxy v.s. IHL model using SMDPL\n",
+    "um_smdpl_gal = np.load(os.path.join(smdpl_gal_dir, \n",
+    "                                    \"sfr_catalog_0.712400_final_logmp_11.npz\"))\n",
+    "\n",
+    "# Results for central and satellite galaxies\n",
+    "um_smdpl_gal_cen = Table(um_smdpl_gal['centrals'])\n",
+    "um_smdpl_gal_sat = Table(um_smdpl_gal['satellites'])\n",
+    "\n",
+    "print(len(um_smdpl_gal_cen), len(um_smdpl_gal_sat))\n",
+    "\n",
+    "print(um_smdpl_gal_cen.colnames)"
    ]
   },
   {
@@ -354,14 +375,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.0"
   },
   "nav_menu": {},
   "toc": {
