Update the figures and notebooks

--- a/note/fig12.ipynb
+++ b/note/fig12.ipynb
@@ -110,7 +110,7 @@
     }
    ],
    "source": [
-    "test_dir = 'test/final'\n",
+    "test_dir = '../model'\n",
     "\n",
     "# The configuration file\n",
     "config_file = os.path.join(test_dir, 'asap_test_1.yaml')\n",
