--- a/note/fig8.ipynb
+++ b/note/fig8.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
     }
    ],
    "source": [
-    "test_dir = 'test/final'\n",
+    "test_dir = '../model'\n",
     "\n",
     "# The configuration file\n",
     "config_file = os.path.join(test_dir, 'asap_test_1.yaml')\n",
@@ -139,26 +139,6 @@
     "print(\"\\n# Best parameters: \", mod_result_best)\n",
     "print(\"# ln(Likelihood) for SMFs   : %8.4f\" % lnlike_smf)\n",
     "print(\"# ln(Likelihood) for DSigma : %8.4f\" % lnlike_dsigma)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.6716212652675246"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.max(mod_result_samples[:, 4])"
    ]
   },
   {
