--- a/note/fig3_default.ipynb
+++ b/note/fig3_default.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "%load_ext autoreload \n",
@@ -56,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +116,7 @@
     }
    ],
    "source": [
-    "test_dir = 'test/final'\n",
+    "test_dir = '../model/'\n",
     "\n",
     "# The configuration file\n",
     "config_file = os.path.join(test_dir, 'asap_test_1.yaml')\n",
@@ -307,13 +316,6 @@
     "\n",
     "mod_smf_plot.savefig('fig/fig3_smf_default.png', dpi=120)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
