Update a few figures

--- a/note/fig5.ipynb
+++ b/note/fig5.ipynb
@@ -2,21 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "%load_ext autoreload \n",
+    "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
     "import os\n",
@@ -65,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,19 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Fit a simple linear relation\n",
-    "mask_fit = (logms_tot[mask_cen] >= 11.5)\n",
-    "\n",
-    "poly_a, poly_b, poly_c = np.polyfit(logms_tot[mask_cen][mask_fit], logmh_vir_cen[mask_fit], 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -616,66 +595,67 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sig_int:     0.0000      4.8401\n",
+      "sig_int:     0.0000      4.7209\n",
       "Computing sig_int\n",
-      "sig_int:     0.0000      4.8401\n",
-      "sig_int:     0.3751     -0.6318\n",
-      "sig_int:     0.3318     -0.5324\n",
-      "sig_int:     0.1659      0.6083\n",
-      "sig_int:     0.2543     -0.2339\n",
-      "sig_int:     0.2105      0.0713\n",
-      "sig_int:     0.2208     -0.0156\n",
-      "sig_int:     0.2189     -0.0008\n",
-      "sig_int:     0.2188      0.0001\n",
+      "sig_int:     0.0000      4.7209\n",
+      "sig_int:     0.3751     -0.6331\n",
+      "sig_int:     0.3307     -0.5316\n",
+      "sig_int:     0.1654      0.5937\n",
+      "sig_int:     0.2526     -0.2297\n",
+      "sig_int:     0.2098      0.0677\n",
+      "sig_int:     0.2195     -0.0145\n",
+      "sig_int:     0.2178     -0.0007\n",
+      "sig_int:     0.2177      0.0001\n",
       "Computing sig_int error\n",
-      "sig_int:     0.2188      0.0127\n",
-      "sig_int:     0.3751     -0.6192\n",
-      "sig_int:     0.2220     -0.0106\n",
-      "sig_int:     0.2206     -0.0011\n",
-      "sig_int:     0.2204      0.0001\n",
+      "sig_int:     0.2177      0.0128\n",
+      "sig_int:     0.3751     -0.6205\n",
+      "sig_int:     0.2209     -0.0107\n",
+      "sig_int:     0.2194     -0.0011\n",
+      "sig_int:     0.2193      0.0001\n",
       "Repeat at best fitting solution\n",
-      "sig_int:     0.2188      0.0001\n",
+      "sig_int:     0.2177      0.0001\n",
       "################################# Values and formal errors\n",
       " intercept:  13.3962 +/- 0.0022\n",
       "     slope:  2.49 +/- 0.018\n",
-      "   scatter:  0.2188 +/- 0.0016\n",
+      "   scatter:  0.2177 +/- 0.0016\n",
       "Observed rms scatter: 0.232 \n",
       "y = a + b*(x-pivot) with pivot = 11.6\n",
       "Spearman r=0.62 and p=0\n",
       "Pearson r=0.68 and p=0\n",
       "##########################################################\n",
-      "seconds 78.13\n",
-      "[13.39618078  2.48950037] \n",
+      "seconds 78.28\n",
+      "[13.39618031  2.48951499] \n",
       "\n",
-      "sig_int:     0.0000     38.8666\n",
+      "sig_int:     0.0000     35.1411\n",
       "Computing sig_int\n",
-      "sig_int:     0.0000     38.8666\n",
-      "sig_int:     0.2474     -0.3867\n",
-      "sig_int:     0.2450     -0.3746\n",
-      "sig_int:     0.1701      0.2766\n",
-      "sig_int:     0.2019     -0.0856\n",
-      "sig_int:     0.1944     -0.0153\n",
-      "sig_int:     0.1928      0.0002\n",
-      "sig_int:     0.1929     -0.0008\n",
+      "sig_int:     0.0000     35.1411\n",
+      "sig_int:     0.2538     -0.4321\n",
+      "sig_int:     0.2507     -0.4183\n",
+      "sig_int:     0.1585      0.4209\n",
+      "sig_int:     0.2048     -0.1349\n",
+      "sig_int:     0.1882      0.0196\n",
+      "sig_int:     0.1903     -0.0022\n",
+      "sig_int:     0.1901     -0.0000\n",
+      "sig_int:     0.1900      0.0009\n",
       "Computing sig_int error\n",
-      "sig_int:     0.1928      0.0101\n",
-      "sig_int:     0.2474     -0.3769\n",
-      "sig_int:     0.1943     -0.0042\n",
-      "sig_int:     0.1938     -0.0000\n",
-      "sig_int:     0.1937      0.0009\n",
+      "sig_int:     0.1901      0.0076\n",
+      "sig_int:     0.2538     -0.4245\n",
+      "sig_int:     0.1912     -0.0037\n",
+      "sig_int:     0.1908     -0.0000\n",
+      "sig_int:     0.1907      0.0009\n",
       "Repeat at best fitting solution\n",
-      "sig_int:     0.1928      0.0002\n",
+      "sig_int:     0.1901     -0.0000\n",
       "################################# Values and formal errors\n",
-      " intercept:  10.734 +/- 0.011\n",
-      "     slope:  0.3564 +/- 0.0051\n",
-      "   scatter:  0.1928 +/- 0.001\n",
-      "Observed rms scatter: 0.195 \n",
-      "y = a + b*(x-pivot) with pivot = 11.47\n",
-      "Spearman r=0.37 and p=0\n",
-      "Pearson r=0.39 and p=0\n",
+      " intercept:  10.7148 +/- 0.0065\n",
+      "     slope:  0.3578 +/- 0.0033\n",
+      "   scatter:  0.19008 +/- 0.00074\n",
+      "Observed rms scatter: 0.193 \n",
+      "y = a + b*(x-pivot) with pivot = 11.42\n",
+      "Spearman r=0.41 and p=0\n",
+      "Pearson r=0.44 and p=0\n",
       "##########################################################\n",
-      "seconds 99.82\n",
-      "[10.7341657   0.35639856]\n"
+      "seconds 195.00\n",
+      "[10.71477899  0.35781021]\n"
      ]
     }
    ],
@@ -683,10 +663,10 @@
     "from lts_linefit import lts_linefit\n",
     "\n",
     "mask_s = (logms_tot >= 11.5) & (logms_tot <= 12.2) & mask_cen\n",
-    "mask_h = (logmh_vir >= 13.2) & (logmh_vir <= 14.4) & mask_cen\n",
+    "mask_h = (logmh_vir >= 13.0) & (logmh_vir <= 14.8) & mask_cen\n",
     "\n",
     "sigms = logms_tot * 0.0 + 0.03\n",
-    "sigmh = logms_tot * 0.0 + 0.02\n",
+    "sigmh = logms_tot * 0.0 + 0.03\n",
     "\n",
     "# Fit the Mstar v.s. Mvir relation \n",
     "p0 = lts_linefit(logms_tot[mask_s], logmh_vir[mask_s], sigms[mask_s], sigmh[mask_s], \n",
@@ -695,7 +675,65 @@
     "\n",
     "# Fit the Mstar v.s. Mvir relation \n",
     "p1 = lts_linefit(logmh_vir[mask_h], logms_tot[mask_h], sigmh[mask_h], sigms[mask_h], \n",
-    "                 pivot=np.median(logms_tot[mask_h]), plot=False)\n",
+    "                 pivot=np.median(logmh_vir[mask_h]), plot=False)\n",
+    "print(p1.ab)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/song/Dropbox/work/code/cappellari/lts_fits/lts_linefit.py:138: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
+      "  ab = np.linalg.lstsq(a*sw[:, None], y*sw)[0]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sig_int:     0.0000     35.1411\n",
+      "Computing sig_int\n",
+      "sig_int:     0.0000     35.1411\n",
+      "sig_int:     0.2538     -0.4321\n",
+      "sig_int:     0.2507     -0.4183\n",
+      "sig_int:     0.1585      0.4209\n",
+      "sig_int:     0.2048     -0.1349\n",
+      "sig_int:     0.1882      0.0196\n",
+      "sig_int:     0.1903     -0.0022\n",
+      "sig_int:     0.1901     -0.0000\n",
+      "sig_int:     0.1900      0.0009\n",
+      "Computing sig_int error\n",
+      "sig_int:     0.1901      0.0076\n",
+      "sig_int:     0.2538     -0.4245\n",
+      "sig_int:     0.1912     -0.0037\n",
+      "sig_int:     0.1908     -0.0000\n",
+      "sig_int:     0.1907      0.0009\n",
+      "Repeat at best fitting solution\n",
+      "sig_int:     0.1901     -0.0000\n",
+      "################################# Values and formal errors\n",
+      " intercept:  11.3763 +/- 0.0011\n",
+      "     slope:  0.3578 +/- 0.0033\n",
+      "   scatter:  0.19008 +/- 0.00074\n",
+      "Observed rms scatter: 0.193 \n",
+      "y = a + b*(x-pivot) with pivot = 13.27\n",
+      "Spearman r=0.41 and p=0\n",
+      "Pearson r=0.44 and p=0\n",
+      "##########################################################\n",
+      "seconds 199.13\n",
+      "[11.37625107  0.35781021]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Fit the Mstar v.s. Mvir relation \n",
+    "p1 = lts_linefit(logmh_vir[mask_h], logms_tot[mask_h], sigmh[mask_h], sigms[mask_h], \n",
+    "                 pivot=np.median(logmh_vir[mask_h]), plot=False)\n",
     "print(p1.ab)"
    ]
   },
