final (large) commit

--- a/cb/Test with MDPL.ipynb
+++ b/cb/Test with MDPL.ipynb
@@ -18,15 +18,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-03T06:18:50.478799Z",
-     "start_time": "2018-10-03T06:18:50.457738Z"
+     "end_time": "2018-10-12T22:39:37.122056Z",
+     "start_time": "2018-10-12T22:39:35.547866Z"
     },
     "hidden": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/christopher/.virtualenvs/hsc_um2/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -97,8 +106,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-03T06:15:15.098374Z",
-     "start_time": "2018-10-03T06:15:14.806328Z"
+     "end_time": "2018-10-12T22:39:39.689049Z",
+     "start_time": "2018-10-12T22:39:39.634972Z"
     }
    },
    "outputs": [
@@ -111,7 +120,7 @@
     }
    ],
    "source": [
-    "datafile = \"/home/christopher/Data/data/hlist_0.73330_vpeak3.hdf5\"\n",
+    "datafile = \"/home/christopher/Data/data/MDPL/hlist_0.73330_vpeak3.hdf5\"\n",
     "\n",
     "f = h5py.File(datafile, \"r\")[\"data\"]\n",
     "print(f.dtype)"
@@ -119,11 +128,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-03T06:46:24.811834Z",
-     "start_time": "2018-10-03T06:46:11.522296Z"
+     "end_time": "2018-10-15T19:36:18.481565Z",
+     "start_time": "2018-10-15T19:34:18.029024Z"
     }
    },
    "outputs": [],
@@ -133,15 +142,31 @@
     "masses = f[\"halo_mvir\"]\n",
     "mass_filter = masses > 10**12\n",
     "\n",
-    "for col in ['halo_id', 'halo_upid', 'halo_mvir', 'halo_Vpeak', 'halo_Acc_Rate_2*Tdyn']:\n",
+    "for col in ['halo_id', 'halo_upid', 'halo_mvir', 'halo_Vpeak', 'halo_Acc_Rate_2*Tdyn', 'halo_x', 'halo_y', 'halo_z']:\n",
     "    # Not sure why this is a float in the hdf5 file?\n",
     "    if col == \"halo_upid\":\n",
     "        df[col] = f[col][mass_filter].astype(np.int64)\n",
     "    else:\n",
     "        df[col] = f[col][mass_filter]\n",
     "    \n",
-    "parents = df[df[\"halo_upid\"] == -1]\n",
-    "children = df[df[\"halo_upid\"] != -1]"
+    "#parents = df[df[\"halo_upid\"] == -1]\n",
+    "#children = df[df[\"halo_upid\"] != -1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-15T19:40:22.164871Z",
+     "start_time": "2018-10-15T19:40:21.498697Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "recarr = df.to_records(index=False)\n",
+    "structarr = recarr.view(recarr.dtype.fields, np.ndarray)\n",
+    "np.save(\"/home/christopher/Data/data/MDPL/hlist_0.73330_vpeak3_mvir_gt_12_wxyz.npy\", structarr)"
    ]
   },
   {
