--- a/note/fig11.ipynb
+++ b/note/fig11.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -206,17 +206,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# Running model: asap_test_1\n",
+      "# Running model: asap_test_final_6\n",
       "#    Will use emcee as sampler ...\n",
-      "#    Use   256 walkers with    snooker moves for   180 x  3 steps of burn-in\n",
-      "#    Use   256 walkers with        kde moves for   400 steps of sampling\n",
+      "#    Use   256 walkers with    snooker moves for   200 x  3 steps of burn-in\n",
+      "#    Use   256 walkers with        kde moves for  9000 steps of sampling\n",
       "\n",
       "# Observations:\n",
       "# Galaxy catalog: s16a_wide2_massive_fsps1_imgsub_use_short.fits\n",
@@ -250,10 +250,14 @@
     }
    ],
    "source": [
-    "test_dir = '../model'\n",
+    "test_dir = '../model/'\n",
+    "model_str = 'final_6'\n",
     "\n",
     "# The configuration file\n",
-    "config_file = os.path.join(test_dir, 'asap_test_1.yaml')\n",
+    "config_file = os.path.join(test_dir, 'asap_test_%s.yaml' % model_str)\n",
+    "\n",
+    "# The results of the final sampling process\n",
+    "result_file = os.path.join(test_dir, 'asap_test_%s_sample.npz' % model_str)\n",
     "\n",
     "# Initialize the model, load the data\n",
     "cfg, params, obs_data, um_data = fitting.initial_model(config_file, verbose=True)\n",
@@ -738,7 +742,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
