--- a/note/convergency.ipynb
+++ b/note/convergency.ipynb
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
     }
    ],
    "source": [
-    "tau = np.mean([integrated_time(walker, c=10, tol=10) for walker in mod_result_chains[:, :, :]], axis=0)\n",
+    "tau = np.mean([integrated_time(walker, c=10, tol=10) for walker in mod_result_chains[:, :9000, :]], axis=0)\n",
     "\n",
     "print(tau)"
    ]
