Small updates for the referee report

--- a/note/fig6.ipynb
+++ b/note/fig6.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
+    "%matplotlib widget\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
@@ -26,6 +26,7 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.patches as patches\n",
+    "from mpl_toolkits import mplot3d\n",
     "\n",
     "from astroML.stats import binned_statistic_2d\n",
     "\n",
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -148,6 +149,51 @@
     "\n",
     "print(\"\\n\", mod_result_best)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Interactive 3-D plot of the Mmax-M10-Mvir plane"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask_mod = ((logms_tot >= 11.45) & (logms_tot <= 12.20) & \n",
+    "            (logms_inn >= 10.65) & (logms_inn <= 11.70) & (um_mock_use['upid'] == -1))\n",
+    "\n",
+    "x_arr = logms_tot[mask_mod]\n",
+    "y_arr = logms_inn[mask_mod]\n",
+    "z_arr = um_mock_use['logmh_vir'][mask_mod]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index = np.random.choice(len(x_arr), 3000, replace=False)\n",
+    "\n",
+    "m3d = Table()\n",
+    "m3d.add_column(Column(data=x_arr[index], name='mmax'))\n",
+    "m3d.add_column(Column(data=y_arr[index], name='m10'))\n",
+    "m3d.add_column(Column(data=z_arr[index], name='mvir'))\n",
+    "\n",
+    "m3d.write('/Users/song/Dropbox/work/project/asap/data/asap_mmax_m10_mvir_subsample.csv',\n",
+    "          format='csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
